[gd_scene load_steps=13 format=3 uid="uid://bs5i45df7rwnf"]

[ext_resource type="Script" uid="uid://dg1wm8v16vrwl" path="res://Scripts/Componentes/UI.gd" id="1_yixhe"]
[ext_resource type="Shader" uid="uid://c5kmgpt3xfcos" path="res://Scripts/Shaders/Wave.gdshader" id="2_4n7mi"]
[ext_resource type="Texture2D" uid="uid://c3tl3oddronfh" path="res://icon.svg" id="2_ijstf"]

[sub_resource type="LabelSettings" id="LabelSettings_yixhe"]
font_size = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yixhe"]
bg_color = Color(0.232585, 0.703418, 0.405251, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4n7mi"]
bg_color = Color(0.244776, 0.244776, 0.244776, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uk570"]
shader = ExtResource("2_4n7mi")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4n7mi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ijstf"]
bg_color = Color(6.16074e-06, 0.739727, 0.899234, 1)

[sub_resource type="Animation" id="Animation_4n7mi"]
resource_name = "JogoSalvo"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AvisoSave:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_uk570"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AvisoSave:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f2wx0"]
_data = {
&"JogoSalvo": SubResource("Animation_4n7mi"),
&"RESET": SubResource("Animation_uk570")
}

[node name="HUD" type="Control" groups=["HUD"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yixhe")

[node name="CounterMoeda" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -251.0
offset_right = -14.0
offset_bottom = 137.0
grow_horizontal = 0
text = "0"
label_settings = SubResource("LabelSettings_yixhe")
horizontal_alignment = 2
vertical_alignment = 1

[node name="BarraVida" type="ProgressBar" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
offset_left = 143.0
offset_top = 10.0
offset_right = 743.0
offset_bottom = 110.0
theme_override_styles/fill = SubResource("StyleBoxFlat_yixhe")
max_value = 5.0
step = 1.0
value = 4.0
show_percentage = false

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
offset_left = 12.0
offset_top = 12.0
offset_right = 948.0
offset_bottom = 162.0
theme_override_constants/separation = 20

[node name="Panel" type="Panel" parent="HBoxContainer"]
clip_children = 2
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4n7mi")

[node name="BarraMagia" type="ProgressBar" parent="HBoxContainer/Panel"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_uk570")
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_4n7mi")
theme_override_styles/fill = SubResource("StyleBoxFlat_ijstf")
max_value = 5.0
step = 1.0
value = 4.0
fill_mode = 3
show_percentage = false

[node name="BarraHeart" type="HBoxContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Coracao" type="TextureRect" parent="HBoxContainer/BarraHeart"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_ijstf")
stretch_mode = 2

[node name="Coracao2" type="TextureRect" parent="HBoxContainer/BarraHeart"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_ijstf")
stretch_mode = 2

[node name="Coracao3" type="TextureRect" parent="HBoxContainer/BarraHeart"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_ijstf")
stretch_mode = 2

[node name="Coracao4" type="TextureRect" parent="HBoxContainer/BarraHeart"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_ijstf")
stretch_mode = 2

[node name="Coracao5" type="TextureRect" parent="HBoxContainer/BarraHeart"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_ijstf")
stretch_mode = 2

[node name="AvisoSave" type="RichTextLabel" parent="."]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -224.0
offset_top = -66.0
offset_right = -9.0
offset_bottom = -7.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 40
text = "Jogo salvo!"
horizontal_alignment = 2

[node name="Anim" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_f2wx0")
}
